# capstone_models

./: .gitignore  CMakeLists.txt  README.md
include/atomic_models/: Basic_Adder.hpp
save_files/config/: project_config.json
save_files/models/atomic/: Basic_Adder.json
save_files/tests/: Basic_Adder.json
test/: CMakeLists.txt
test/td_Basic_Adder/: Basic_Adder_Variant_Goblin.hpp  td_Basic_Adder.cpp  test_data.hpp  top_coupled_Basic_Adder.hpp
test/td_Basic_Adder/simulation_results/: two_negative_numbers.csv  two_numbers_twice.csv  two_positive_numbers.csv
