###---Basic_Adder CONFIG BEGIN---###
add_executable(td_Basic_Adder	"td_Basic_Adder/td_Basic_Adder.cpp")
# CMake configurations for windows
target_include_directories(td_Basic_Adder PUBLIC ${includes_list})

# CMake configurations for unix

# CMake configurations for apple


###---Basic_Adder CONFIG END---###
